[package]
name = "field"
version = "0.1.0"
authors = [" <kromsten kromsten@pm.me> "]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", default-features = false, package = "secret-cosmwasm-std", branch = "ibc-msg-transfer-memo", features = [
  "ibc3",
  "random",
] }
secret-toolkit = { version = "0.9.0", default-features = false,  features = ["permit", "storage"] }

schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
semver = "1.0.18"
rand_chacha = { version = "0.3.1", default-features = false}

[patch.crates-io]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "ibc-msg-transfer-memo", package = "secret-cosmwasm-std" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "ibc-msg-transfer-memo", package = "secret-cosmwasm-storage" }

[[bin]]
name = "schema"
required-features = ["schema"]
